# Clue-Less

./: Dockerfile  LICENSE  Mainfest.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt
clueless/: PlayerManager.py  __init__.py  cli_utils.py  main.py  settings.py
clueless/app/: webapp.py
clueless/app/api/: __init__.py  auth_views.py
clueless/app/api/game/: __init__.py  views.py
clueless/app/api/room/: __init__.py  views.py
clueless/app/api/session/: __init__.py  views.py
clueless/app/api/user/: views.py
clueless/app/core/: GameLoop.py  Room.py  __init__.py  users.py
clueless/app/core/game/: GameDBController.py  GameLoop.py  RoomBuilderCLI.py  character.py  gameboard.py  hall.py  player.py  room.py  weapon.py
clueless/app/core/schemas/: game.py
clueless/app/core/session/: BasicVerifier.py  SessionCRUD.py  SessionData.py  __init__.py
clueless/app/db/: __init__.py  user_schemas.py
clueless/app/db/crud/: base.py  card.py  character.py  game.py  location.py  room.py
clueless/app/db/models/: CardCharacterLink.py  __init__.py  base.py  card.py  character.py  game.py  location.py  room.py  shared.py  user.py
clueless/app/ui/: views.py
clueless/static/: auth.js  index.html  utils.js
clueless/static/templates/: base_layout.html  chat2.html  game_over.html  gameboard.html  index.html  join_game.html  lobby.html  login.html  login_page.html  register.html  room.html  rooms.html  waitingRoom.html
tests/: conftest.py  game_utils.py  test_game.py  test_room.py  utils.py
